--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -14,3 +14,10 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.application.name=ADMIN
+
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
