--- a/prestamosDevoluciones/src/main/resources/application.properties
+++ b/prestamosDevoluciones/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+server.port = 8082
 
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:file:~/data.employee_db
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://localhost:3306/biblio_app
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.application.name=PRESTAMOSDEVOLUCIONES
+
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
